Latest Commit => Directive added => Refined app structure

--- a/ECommerceAJS/WebContent/app/views/dash.html
+++ b/ECommerceAJS/WebContent/app/views/dash.html
@@ -1,12 +1,12 @@
 <div ng-controller="DashBoardController as dashBoard">
 
-	<div ng-include="'app/views/header.html'"></div>
+	<div ng-include="'app/views/common/header.html'"></div>
 
 	<!--Page content  start-->
 	<div class="page-content">
 
 		<!-- breadcrumbs  -->
-		<div ng-include="'app/views/breadcrumbs.html'"></div>
+		<div ng-include="'app/views/common/breadcrumbs.html'"></div>
 
 
 		<!--Catalog Grid-->
@@ -32,16 +32,16 @@
 		</section>
 
 		<!--  carousel -->
-		<div ng-include="'app/views/carousel.html'"></div>
+		<div ng-include="'app/views/common/carousel.html'"></div>
 
 		<!-- sticky buttons -->
-		<div ng-include="'app/views/stickyButtons.html'"></div>
+		<div ng-include="'app/views/common/stickyButtons.html'"></div>
 
 		<!-- subscrptions -->
-		<div ng-include="'app/views/subscriptions.html'"></div>
+		<div ng-include="'app/views/common/subscriptions.html'"></div>
 
 		<!-- footer -->
-		<div ng-include="'app/views/footer.html'"></div>
+		<div ng-include="'app/views/common/footer.html'"></div>
 
 	</div>
 	<!--Page Content end  -->
